# Gogobot-edu-sdk-cpp

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md
docs/: 2026-06-15-aidog-sdk-cpp-design.md  action_parameter_types.md  api_reference.md  connection_ble.md  demo_videos.md  dev_pc_websocket.md  examples.md  firmware_compatibility.md  games.md  games.zh_CN.md  protocol_ble.md  quick_start.en.md  quick_start.zh_CN.md  safety.md  troubleshooting.md
docs/assets/demos/: README.md
examples/: README.md  ble_action_list.cpp  ble_basic_actions.cpp  ble_connect_test.cpp  ble_ears_expressions_audio.cpp  ble_imu_read.cpp  ble_move.cpp  ble_set_volume.cpp  ble_tof_read.cpp  ws_basic_actions.cpp  ws_imu_read.cpp
examples/01_connection/bluetooth/: ble_connect_by_address.cpp  ble_scan.cpp  ble_scan_and_connect.cpp
examples/01_connection/websocket/: ws_connection_test.cpp
examples/02_actions/bluetooth/: ble_action.cpp  ble_basic_actions.cpp  ble_choreography.cpp  ble_ears.cpp  ble_ears_expressions_audio.cpp  ble_expression.cpp  ble_special_detection.cpp
examples/02_actions/websocket/: ws_basic_actions.cpp  ws_choreography.cpp  ws_ears_expressions_audio.cpp
examples/03_movement/bluetooth/: ble_directional_move.cpp  ble_timed_move.cpp
examples/03_movement/websocket/: ws_directional_move.cpp  ws_timed_move.cpp
examples/04_sensors/bluetooth/: ble_imu_read.cpp  ble_tof_read.cpp
examples/04_sensors/websocket/: ws_imu_lan_read.cpp  ws_imu_read.cpp  ws_tof_lan_read.cpp
examples/05_audio/: bidirectional_pcm_ws_host.cpp
examples/05_audio/bluetooth/: ble_audio.cpp  ble_set_volume.cpp
examples/06_robot_adjust/: custom_action.cpp  safe_pose_adjust.cpp
examples/06_robot_adjust/bluetooth/: ble_custom_action.cpp  ble_safe_pose_adjust.cpp
include/: aidog.hpp
include/aidog/: actions.hpp  aidog.hpp  ble_transport_win.hpp  error.hpp  protocol.hpp  sensor_parser.hpp  transport.hpp  types.hpp  websocket_host.hpp
src/: actions.cpp  aidog.cpp  ble_transport_stub.cpp  ble_transport_win.cpp  protocol.cpp  sensor_parser.cpp  websocket_host.cpp  websocket_host_stub.cpp
tests/: test_actions.cpp  test_protocol.cpp  test_sensor_parser.cpp
tools/: set_dev_pc_ws_ip_ble.cpp  user_control_ble_win.cpp  user_control_ws_win.cpp
